--- a/public/modules/core/views/edit-dnd.client.view.html
+++ b/public/modules/core/views/edit-dnd.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ChallengesEditDndController">
+<section data-ng-controller="ChallengesEditMcqController">
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
         <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
 
@@ -13,9 +13,9 @@
                     <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
                 </md-input-container>
                 <div flex>
-                    <strong>Options</strong>
+                    <strong>Tags</strong>
                     <md-button ng-click="addOption()" class="md-icon-button"
-                               aria-label="Add option">
+                               aria-label="Add tag">
                         <md-icon md-font-set="material-icons">add</md-icon>
                     </md-button>
                 </div>
@@ -24,11 +24,9 @@
                         <div layout="row" layout-align="center" flex>
 
                             <md-input-container flex>
-                                <label>Option {{$index + 1}}</label>
+                                <label>Tag {{$index + 1}}</label>
                                 <input ng-model="option.string">
                             </md-input-container>
-                            <md-checkbox ng-model="option.isCorrect" aria-label="Is a correct option">
-                            </md-checkbox>
                             <md-button aria-label="Remove"
                                        ng-click="deleteFromList('mcqs', option)"
                                        class="md-icon-button">
