--- a/public/modules/core/views/edit-micq.client.view.html
+++ b/public/modules/core/views/edit-micq.client.view.html
@@ -1,50 +1,77 @@
 <section data-ng-controller="ChallengesEditMicqController">
-    <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
-        <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
+    <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
+        <md-whiteframe layout="column" flex="66" class="md-whiteframe-z3" layout-align="center center">
 
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
-
+            <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
+                <md-input-container>
+                    <label>Question</label>
+                    <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
+                </md-input-container>
+            </div>
+            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024"
+                    height="552"></canvas>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
             <div flex layout="column" layout-margin layout-fill layout-padding>
 
-                <md-input-container flex>
-                    <label>Question</label>
-                    <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
-                </md-input-container>
+
                 <div flex>
                     <strong>Options</strong>
-                    <md-button ng-click="addOption()" class="md-icon-button"
-                               aria-label="Add option">
-                        <md-icon md-font-set="material-icons">add</md-icon>
-                    </md-button>
                 </div>
                 <div layout="column" flex>
-                    <div ng-repeat="option in mcqs">
-                        <div layout="row" layout-align="center" flex>
+                    <div layout="row" flex>
+                        <div layout="column" flex>
+                            <lf-ng-md-file-input flex accept="image/*"
+                                                 lf-files="files[0]" lf-option="optoin08"
+                                                 lf-placeholder="Pick Image" lf-browse-label="Search"
+                                                 lf-remove-label="Delete"
+                                                 lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
+                                                 drag preview></lf-ng-md-file-input>
 
-                            <md-input-container flex>
-                                <label>Option {{$index + 1}}</label>
-                                <input ng-model="option.string">
-                            </md-input-container>
-                            <md-checkbox ng-model="option.isCorrect" aria-label="Is a correct option">
+                            <md-checkbox ng-model="mcqs[0].isCorrect" aria-label="Is a correct option">
+                                Is a correct option
                             </md-checkbox>
-                            <md-button aria-label="Remove"
-                                       ng-click="deleteFromList('mcqs', option)"
-                                       class="md-icon-button">
-                                <md-icon md-font-set="material-icons">remove</md-icon>
-                            </md-button>
+                        </div>
+                        <div layout="column" flex>
+                            <lf-ng-md-file-input flex accept="image/*"
+                                                 lf-files="files[1]" lf-option="optoin08"
+                                                 lf-placeholder="Pick Image" lf-browse-label="Search"
+                                                 lf-remove-label="Delete"
+                                                 lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
+                                                 drag preview></lf-ng-md-file-input>
 
+                            <md-checkbox ng-model="mcqs[1].isCorrect" aria-label="Is a correct option">
+                                Is a correct option
+                            </md-checkbox>
+                        </div>
+                    </div>
+                    <div layout="row" flex>
+                        <div layout="column" flex>
+                            <lf-ng-md-file-input flex accept="image/*"
+                                                 lf-files="files[2]" lf-option="optoin08"
+                                                 lf-placeholder="Pick Image" lf-browse-label="Search"
+                                                 lf-remove-label="Delete"
+                                                 lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
+                                                 drag preview></lf-ng-md-file-input>
+
+                            <md-checkbox ng-model="mcqs[2].isCorrect" aria-label="Is a correct option">
+                                Is a correct option
+                            </md-checkbox>
+                        </div>
+                        <div layout="column" flex>
+                            <lf-ng-md-file-input flex accept="image/*"
+                                                 lf-files="files[3]" lf-option="optoin08"
+                                                 lf-placeholder="Pick Image" lf-browse-label="Search"
+                                                 lf-remove-label="Delete"
+                                                 lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
+                                                 drag preview></lf-ng-md-file-input>
+
+                            <md-checkbox ng-model="mcqs[3].isCorrect" aria-label="Is a correct option">
+                                Is a correct option
+                            </md-checkbox>
                         </div>
                     </div>
                 </div>
-
-                <lf-ng-md-file-input flex accept="image/*"
-                                     lf-files="files" lf-option="optoin08"
-                                     lf-placeholder="Pick Image" lf-browse-label="Search"
-                                     lf-remove-label="Delete"
-                                     lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
-                                     drag preview></lf-ng-md-file-input>
                 <md-button ng-click="onSubmit()" class="md-raised md-primary">Save</md-button>
             </div>
 
