--- a/public/modules/core/views/edit-polygon.client.view.html
+++ b/public/modules/core/views/edit-polygon.client.view.html
@@ -1,9 +1,9 @@
 <section data-ng-controller="ChallengesEditPolygonController">
+
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
-        <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
-
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
-
+        <md-whiteframe layout="column" flex="66" class="md-whiteframe-z3" layout-align="center center">
+            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024"
+                    height="552"></canvas>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
             <div flex layout="column" layout-margin layout-fill layout-padding>
@@ -13,21 +13,17 @@
                     <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
                 </md-input-container>
                 <div flex>
-                    <strong>Options</strong>
+                    <strong>Polygons</strong>
                     <md-button ng-click="addOption()" class="md-icon-button"
                                aria-label="Add option">
                         <md-icon md-font-set="material-icons">add</md-icon>
                     </md-button>
                 </div>
-                <div layout="column" flex>
+                <div layout="row" flex>
                     <div ng-repeat="option in mcqs">
                         <div layout="row" layout-align="center" flex>
 
-                            <md-input-container flex>
-                                <label>Option {{$index + 1}}</label>
-                                <input ng-model="option.string">
-                            </md-input-container>
-                            <md-checkbox ng-model="option.isCorrect" aria-label="Is a correct option">
+                            <md-checkbox ng-model="option.isCorrect" ng-change="draw()" aria-label="Is a correct option">
                             </md-checkbox>
                             <md-button aria-label="Remove"
                                        ng-click="deleteFromList('mcqs', option)"
