--- a/public/modules/core/views/edit-dnd.client.view.html
+++ b/public/modules/core/views/edit-dnd.client.view.html
@@ -1,8 +1,8 @@
-<section data-ng-controller="ChallengesEditMcqController">
+<section data-ng-controller="ChallengesEditDndController">
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
         <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
 
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
+            <canvas layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
 
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
@@ -25,7 +25,8 @@
 
                             <md-input-container flex>
                                 <label>Tag {{$index + 1}}</label>
-                                <input ng-model="option.string">
+                                <input ng-model="option.string"
+                                       ng-change="textChanged(option)">
                             </md-input-container>
                             <md-button aria-label="Remove"
                                        ng-click="deleteFromList('mcqs', option)"
