--- a/public/modules/core/views/edit-polygon.client.view.html
+++ b/public/modules/core/views/edit-polygon.client.view.html
@@ -2,7 +2,7 @@
 
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
         <md-whiteframe layout="column" flex="66" class="md-whiteframe-z3" layout-align="center center">
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024"
+            <canvas layout-align="center center" class="col-md-8" id="board" width="1024"
                     height="552"></canvas>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
