--- a/public/modules/core/views/edit-mcq.client.view.html
+++ b/public/modules/core/views/edit-mcq.client.view.html
@@ -35,7 +35,7 @@
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
         <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
 
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
+            <canvas layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
 
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
