--- a/public/modules/core/views/edit-micq.client.view.html
+++ b/public/modules/core/views/edit-micq.client.view.html
@@ -33,21 +33,21 @@
         </md-whiteframe>
     </div>
     <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
-        <md-whiteframe layout="column" flex="66" class="md-whiteframe-z3" layout-align="center center">
+        <md-whiteframe layout="column" flex class="md-whiteframe-z3" layout-align="center center">
 
-            <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
-                <md-input-container>
-                    <label>Question</label>
-                    <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
-                </md-input-container>
-            </div>
-            <canvas flex layout-align="center center" class="col-md-8" id="board" width="1024"
+            <canvas layout-align="center" class="col-md-8" id="board" width="1024"
                     height="552"></canvas>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
             <div flex layout="column" layout-margin layout-fill layout-padding>
 
 
+                <div layout-align="center" layout-margin layout-fill layout-padding>
+                    <md-input-container>
+                        <label>Question</label>
+                        <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
+                    </md-input-container>
+                </div>
                 <div flex>
                     <strong>Options</strong>
                 </div>
