Challenges and Courses dialog improvrements

--- a/public/modules/core/views/challenge.hint.dialog.html
+++ b/public/modules/core/views/challenge.hint.dialog.html
@@ -1,8 +1,8 @@
-<md-dialog aria-label="Hint {{challenge.name}} Challenge">
+<md-dialog aria-label="Ecplanation {{challenge.name}} Challenge">
     <form>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Hint {{challenge.name}} Challenge</h2>
+                <h2>Ecplanation {{challenge.name}} Challenge</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="hide()">
                     <md-icon md-font-set="material-icons">close</md-icon>
@@ -12,7 +12,7 @@
         <md-dialog-content>
 
             <div flex>
-                <strong>Hints</strong>
+                <strong>Data</strong>
                 <md-menu md-offset="0 -7">
                     <md-button aria-label="Open hints menu"
                                class="md-icon-button" ng-click="$mdOpenMenu($event)">
