--- a/public/modules/core/views/edit-ftb.client.view.html
+++ b/public/modules/core/views/edit-ftb.client.view.html
@@ -9,11 +9,7 @@
             </md-input-container>
             <md-button ng-disabled="true" class="md-primary">Fill The Options</md-button>
             <span flex></span>
-            <md-button class="md-icon-button" aria-label="Hint" ng-click="showHint($event)">
-                <md-icon md-font-set="material-icons">info</md-icon>
-                <md-tooltip>
-                    HINT
-                </md-tooltip>
+            <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
             <md-menu>
                 <md-button aria-label="Difficulty" class="md-raised md-primary"
@@ -30,12 +26,8 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-            <md-button class="md-icon-button" aria-label="Preview" ng-click="showAdvanced($event)">
-                <md-icon md-font-set="material-icons">play_arrow</md-icon>
-                <md-tooltip>
-                    PREVIEW
-                </md-tooltip>
-            </md-button>
+            <md-button ng-click="showAdvanced($event)" md-no-ink class="md-primary">Preview</md-button>
+
         </md-whiteframe>
     </div>
 
@@ -73,7 +65,8 @@
                                 <label>Choices</label>
                                 <md-select ng-model="choice">
                                     <md-option ng-repeat="choice in option.choices" value="{{choice.string}}">
-                                        {{choice.string}}{{choice.isCorrect ? ' (correct)' : ''}}</md-option>
+                                        {{choice.string}}{{choice.isCorrect ? ' (correct)' : ''}}
+                                    </md-option>
                                 </md-select>
                             </md-input-container>
                         </div>
@@ -85,7 +78,8 @@
                         </md-button>
                         <md-menu-content width="2">
                             <md-menu-item ng-repeat="item in ['Text', 'Multiple Choice']">
-                                <md-button ng-click="addOption(options, $index, $event)"> <span md-menu-align-target>{{item}}</span>  </md-button>
+                                <md-button ng-click="addOption(options, $index, $event)"><span md-menu-align-target>{{item}}</span>
+                                </md-button>
                             </md-menu-item>
                         </md-menu-content>
                     </md-menu>
@@ -97,7 +91,7 @@
                 </div>
             </div>
 
-            <md-button ng-click="onSubmit()" class="md-raised md-primary">Save</md-button>
+            <md-button ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
         </div>
     </md-whiteframe>
 </section>
