--- a/public/modules/core/views/edit-mcq.client.view.html
+++ b/public/modules/core/views/edit-mcq.client.view.html
@@ -9,11 +9,8 @@
             </md-input-container>
             <md-button ng-disabled="true" class="md-primary">Multiple Choice Question</md-button>
             <span flex></span>
-            <md-button class="md-icon-button" aria-label="Hint" ng-click="showHint($event)">
-                <md-icon md-font-set="material-icons">info</md-icon>
-                <md-tooltip>
-                    HINT
-                </md-tooltip>
+
+            <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
             <md-menu>
                 <md-button aria-label="Difficulty" class="md-raised md-primary"
@@ -30,12 +27,8 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-            <md-button class="md-icon-button" aria-label="Preview" ng-click="showAdvanced($event)">
-                <md-icon md-font-set="material-icons">play_arrow</md-icon>
-                <md-tooltip>
-                    PREVIEW
-                </md-tooltip>
-            </md-button>
+            <md-button ng-click="showAdvanced($event)" md-no-ink class="md-primary">Preview</md-button>
+
         </md-whiteframe>
     </div>
     <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
@@ -53,10 +46,6 @@
                 </md-input-container>
                 <div flex>
                     <strong>Options</strong>
-                    <md-button ng-click="addOption()" class="md-icon-button"
-                               aria-label="Add option">
-                        <md-icon md-font-set="material-icons">add</md-icon>
-                    </md-button>
                 </div>
                 <div layout="column" flex>
                     <div ng-repeat="option in mcqs">
@@ -66,7 +55,8 @@
                                 <label>Option {{$index + 1}}</label>
                                 <input ng-model="option.string">
                             </md-input-container>
-                            <md-checkbox ng-model="option.isCorrect" ng-change="checkCorrect(option)" aria-label="Is a correct option">
+                            <md-checkbox ng-model="option.isCorrect" ng-change="checkCorrect(option)"
+                                         aria-label="Is a correct option">
                             </md-checkbox>
                             <md-button aria-label="Remove"
                                        ng-click="deleteFromList('mcqs', option)"
@@ -77,13 +67,20 @@
                         </div>
                     </div>
                 </div>
+                <div layout="row">
+                    <span flex></span>
+                    <md-button ng-click="addOption()" class="md-icon-button"
+                               aria-label="Add option">
+                        <md-icon md-font-set="material-icons">add</md-icon>
+                    </md-button>
+                </div>
                 <lf-ng-md-file-input flex accept="image/*"
                                      lf-files="files" lf-option="optoin08"
                                      lf-placeholder="Pick Image" lf-browse-label="Search"
                                      lf-remove-label="Delete"
                                      lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
                                      drag preview></lf-ng-md-file-input>
-                <md-button ng-click="onSubmit()" class="md-raised md-primary">Save</md-button>
+                <md-button ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
             </div>
 
         </md-whiteframe>
