--- a/public/modules/core/views/course.add.dialog.html
+++ b/public/modules/core/views/course.add.dialog.html
@@ -14,6 +14,21 @@
                 <label>Course name</label>
                 <input type="text" ng-model="course.name">
             </md-input-container>
+            <md-menu>
+                <md-button aria-label="Difficulty" class="md-raised md-primary"
+                           ng-click="$mdOpenMenu($event)">
+                    {{course.difficulty}}
+                    <md-tooltip>
+                        DIFFICULTY
+                    </md-tooltip>
+                </md-button>
+                <md-menu-content width="4">
+                    <md-menu-item ng-repeat="difficulty in ['EASY', 'MEDIUM', 'HARD']">
+                        <md-button ng-click="course.difficulty = difficulty"> {{difficulty}}
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
         </md-dialog-content>
     </div>
     <div>
