--- a/public/modules/core/views/courses.client.view.html
+++ b/public/modules/core/views/courses.client.view.html
@@ -11,7 +11,7 @@
             </md-grid-tile-footer>
         </md-grid-tile>
     </md-grid-list>
-    <md-button class="md-fab md-primary md-fab-bottom-right" aria-label="Add challenge"
+    <md-button class="md-fab md-primary" aria-label="Add challenge"
                ng-click="showDialog($event)">
         <md-icon md-font-set="material-icons" style="width: 2.7rem; height: 1.15rem">add</md-icon>
     </md-button>
