--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -63,6 +63,12 @@
                                 </md-icon>
                                 <input type="password" required id="password" name="password" data-ng-model="credentials.password" placeholder="Password">
                             </md-input-container>
+                            <md-input-container flex>
+                                <md-icon>
+                                    <i class="material-icons">vpn_key</i>
+                                </md-icon>
+                                <input type="password" required id="password2" name="password" data-ng-model="credentials.password2" placeholder="Password">
+                            </md-input-container>
                         </div>
                         <div layout="column" layout-align="center end">
                             <button type="submit" class="md-button md-raised md-primary">sign up</button><a href="/#!/signin">Or Sign in</a>
