Multiple corrections from feedback

--- a/public/modules/core/views/challenge.hint.dialog.html
+++ b/public/modules/core/views/challenge.hint.dialog.html
@@ -39,7 +39,7 @@
                     <md-button aria-label="Remove"
                                ng-click="delete(option)"
                                class="md-icon-button">
-                        <md-icon md-font-set="material-icons">remove</md-icon>
+                        <md-icon md-font-set="material-icons">delete</md-icon>
                     </md-button>
                 </div>
             </div>
