--- a/public/modules/core/views/edit-dnd.client.view.html
+++ b/public/modules/core/views/edit-dnd.client.view.html
@@ -58,7 +58,7 @@
                             <md-button aria-label="Remove"
                                        ng-click="deleteFromList('mcqs', option)"
                                        class="md-icon-button">
-                                <md-icon md-font-set="material-icons">remove</md-icon>
+                                <md-icon md-font-set="material-icons">delete</md-icon>
                             </md-button>
 
                         </div>
