--- a/public/modules/core/views/edit-ftb.client.view.html
+++ b/public/modules/core/views/edit-ftb.client.view.html
@@ -86,7 +86,7 @@
                     <md-button aria-label="Remove"
                                ng-click="deleteFromList('mcqs', options)"
                                class="md-icon-button">
-                        <md-icon md-font-set="material-icons">remove</md-icon>
+                        <md-icon md-font-set="material-icons">delete</md-icon>
                     </md-button>
                 </div>
             </div>
