--- a/public/modules/core/views/edit-micq.client.view.html
+++ b/public/modules/core/views/edit-micq.client.view.html
@@ -30,11 +30,7 @@
         </md-whiteframe>
     </div>
     <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
-        <md-whiteframe layout="column" flex class="md-whiteframe-z3" layout-align="center center">
 
-            <canvas layout-align="center" class="col-md-8" id="board" width="1024"
-                    height="552"></canvas>
-        </md-whiteframe>
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
             <div flex layout="column" layout-margin layout-fill layout-padding>
 
@@ -102,9 +98,17 @@
                         </div>
                     </div>
                 </div>
-                <md-button ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
+                <div layout=row">
+                    <div flex="80"></div>
+                    <md-button flex="20" ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
+                </div>
             </div>
 
+        </md-whiteframe>
+        <md-whiteframe layout="column" flex class="md-whiteframe-z3" layout-align="center center">
+
+            <canvas layout-align="center" class="col-md-8" id="board" width="1024"
+                    height="552"></canvas>
         </md-whiteframe>
     </div>
 </section>
