--- a/public/modules/core/views/edit-dnd.client.view.html
+++ b/public/modules/core/views/edit-dnd.client.view.html
@@ -1,86 +1,90 @@
 <section data-ng-controller="ChallengesEditDndController">
-    <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
 
-        <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="left">
+    <div layout="column" layout-align="center center">
+        <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
 
-            <md-input-container>
-                <label>Challenge name</label>
-                <input ng-model="challenge.name">
-            </md-input-container>
-            <md-button ng-disabled="true" class="md-primary">Drag And Drop</md-button>
-            <span flex></span>
-            <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
-            </md-button>
-            <md-menu>
-                <md-button aria-label="Difficulty" class="md-raised md-primary"
-                           ng-click="$mdOpenMenu($event)">
-                    {{challenge.challengeFile.difficulty}}
-                    <md-tooltip>
-                        DIFFICULTY
-                    </md-tooltip>
-                </md-button>
-                <md-menu-content width="4">
-                    <md-menu-item ng-repeat="difficulty in ['EASY', 'MEDIUM', 'HARD']">
-                        <md-button ng-click="chooseDifficulty(difficulty)"> {{difficulty}}
-                        </md-button>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
-            <md-button ng-click="showAdvanced($event)" md-no-ink class="md-primary">Preview</md-button>
+            <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="left">
 
-        </md-whiteframe>
-    </div>
-    <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
-        <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
-
-            <canvas layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
-
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
-            <div flex layout="column" layout-margin layout-fill layout-padding>
-
-                <md-input-container flex>
-                    <label>Question</label>
-                    <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
+                <md-input-container>
+                    <label>Challenge name</label>
+                    <input ng-model="challenge.name">
                 </md-input-container>
-                <div flex>
-                    <strong>Tags</strong>
-                </div>
-                <div layout="column" flex>
-                    <div ng-repeat="option in mcqs">
-                        <div layout="row" layout-align="center" flex>
-
-                            <md-input-container flex>
-                                <label>Tag {{$index + 1}}</label>
-                                <input ng-model="option.string"
-                                       ng-change="textChanged(option)">
-                            </md-input-container>
-                            <md-button aria-label="Remove"
-                                       ng-click="deleteFromList('mcqs', option)"
-                                       class="md-icon-button">
-                                <md-icon md-font-set="material-icons">delete</md-icon>
+                <md-button ng-disabled="true" class="md-primary">Drag And Drop</md-button>
+                <span flex></span>
+                <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
+                </md-button>
+                <md-menu>
+                    <md-button aria-label="Difficulty" class="md-raised md-primary"
+                               ng-click="$mdOpenMenu($event)">
+                        {{challenge.challengeFile.difficulty}}
+                        <md-tooltip>
+                            DIFFICULTY
+                        </md-tooltip>
+                    </md-button>
+                    <md-menu-content width="4">
+                        <md-menu-item ng-repeat="difficulty in ['EASY', 'MEDIUM', 'HARD']">
+                            <md-button ng-click="chooseDifficulty(difficulty)"> {{difficulty}}
                             </md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
+                <md-button ng-click="showAdvanced($event)" md-no-ink class="md-primary">Preview</md-button>
 
+            </md-whiteframe>
+        </div>
+
+
+        <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
+            <md-whiteframe flex="66" class="md-whiteframe-z3" layout layout-align="center center">
+
+                <canvas layout-align="center center" class="col-md-8" id="board" width="1024" height="552"></canvas>
+
+            </md-whiteframe>
+            <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="center center">
+                <div flex layout="column" layout-margin layout-fill layout-padding>
+
+                    <md-input-container flex>
+                        <label>Question</label>
+                        <textarea ng-model="challenge.challengeFile.textControl.text"></textarea>
+                    </md-input-container>
+                    <div flex>
+                        <strong>Tags</strong>
+                    </div>
+                    <div layout="column" flex>
+                        <div ng-repeat="option in mcqs">
+                            <div layout="row" layout-align="center" flex>
+
+                                <md-input-container flex>
+                                    <label>Tag {{$index + 1}}</label>
+                                    <input ng-model="option.string"
+                                           ng-change="textChanged(option)">
+                                </md-input-container>
+                                <md-button aria-label="Remove"
+                                           ng-click="deleteFromList('mcqs', option)"
+                                           class="md-icon-button">
+                                    <md-icon md-font-set="material-icons">delete</md-icon>
+                                </md-button>
+
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div layout="row">
-                    <span flex></span>
-                    <md-button ng-click="addOption()" class="md-icon-button"
-                               aria-label="Add tag">
-                        <md-icon md-font-set="material-icons">add</md-icon>
-                    </md-button>
+                    <div layout="row">
+                        <span flex></span>
+                        <md-button ng-click="addOption()" class="md-icon-button"
+                                   aria-label="Add tag">
+                            <md-icon md-font-set="material-icons">add</md-icon>
+                        </md-button>
+                    </div>
+
+                    <lf-ng-md-file-input flex accept="image/*"
+                                         lf-files="files" lf-option="optoin08"
+                                         lf-placeholder="Pick Image" lf-browse-label="Search"
+                                         lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
+                                         drag preview></lf-ng-md-file-input>
+                    <md-button ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
                 </div>
 
-                <lf-ng-md-file-input flex accept="image/*"
-                                     lf-files="files" lf-option="optoin08"
-                                     lf-placeholder="Pick Image" lf-browse-label="Search"
-                                     lf-remove-label="Delete"
-                                     lf-drag-and-drop-label="Drag & Drop an image (png or jpg) here!"
-                                     drag preview></lf-ng-md-file-input>
-                <md-button ng-click="onSubmit(null, true)" class="md-raised md-primary">Save</md-button>
-            </div>
-
-        </md-whiteframe>
+            </md-whiteframe>
+        </div>
     </div>
 </section>
